--- a/chat/templates/chat/catan.html
+++ b/chat/templates/chat/catan.html
@@ -28,11 +28,9 @@
         <div id="masik_palya" class="container"> 
             {% comment %} <!-- 15x15-ös tábla --> {% endcomment %}
         </div>
-        <div class="dobasbuttonc"> 
-             <button id="dobas">dobás</button>
-             <!--<button id="claimkiir">kiír</button>-->  
-        </div>
         <div class="structures">
+            <button id="dobas">dobás</button>
+            <button id="resourcess">resources</button>
             <button id="rout">ut: 4fa</button>
             <button id="village">falu: 15fa 10kő 20széna 10szövet</button>
             <button id="town">varos: 30fa 40kő 10széna 20szövet 6érc</button>
