--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,26 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'chat/css/foldal.css' %}">
     <title>catan</title>
 </head>
 <body>
-    <h1>catan</h1>
-    {% if request.user.is_authenticated %}
-
+    <div id="egyik_palya" class="container"> 
+        <h1>catan</h1>
+    </div>
+    <div id="egyik_palya" class="container2"> 
+        {% if request.user.is_authenticated %}
+            <p><a href="ujjatek/">Új játék indítása</a></p>
+            <p><a href="lobby/">Belépés a játékba</a></p>
+            <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+                <button type="submit">Kijelentkezés</button>
+                </form>   
+            {% else %}
+            <p><a href="/regisztracio/">Regisztráció</a></p>
+            <p><a href="/accounts/login/">Belépés</a></p>
+        {% endif %}
+    </div>
     
-    <p><a href="ujjatek/">Új játék indítása</a></p>
-    <p><a href="lobby/">Belépés a játékba</a></p>
-    <form action="{% url 'logout' %}" method="POST">
-        {% csrf_token %}
-        <button type="submit">Kijelentkezés</button>
-    </form>   
-
-    {% else %}
-
-    <p><a href="/regisztracio/">Regisztráció</a></p>
-    <p><a href="/accounts/login/">Belépés</a></p>
-    {% endif %}
 </body>
 </html>
