--- a/chat/templates/chat/jatekok.html
+++ b/chat/templates/chat/jatekok.html
@@ -1,9 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'chat/css/jatekok.css' %}">
     <title>Játékok</title>
 </head>
 <body>
