--- a/chat/templates/chat/catan.html
+++ b/chat/templates/chat/catan.html
@@ -30,7 +30,7 @@
         </div>
 
         <h3 id="masik_player">{{a_jatek.masik.username}}</h3>
-        <div id="masik_palya" class="container"> 
+        <div id="masik_palya" class="container2"> 
             
         </div>
         <div class="structures">
